2010-04-22  Nick Clifton  <nickc@redhat.com>

	* po/gprof.pot: Updated by the Translation project.
	* po/vi.po: Updated Vietnamese translation.
	* po/bg.po: Updated Bulgarian translation.

2010-04-07  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2010-03-30  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.am (CONFIG_STATUS_DEPENDENCIES): Define.
	* Makefile.in: Regenerate.

2010-03-16  Segher Boessenkool  <segher@kernel.crashing.org>

	* gmon_io.c (gmon_out_read): Close file when done.

2010-02-15  Nick Clifton  <nickc@redhat.com>

	* po/vi.po: Updated Vietnamese translation.

2010-01-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.in: Regenerate.
	* configure: Regenerate.

For older changes see ChangeLog-2009

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: