@@ -1,3 +1,8 @@
+2010-04-27  Hongsheng Zhang  <hongsheng611@gmail.com>
+
+	PR gprof/11524
+	* corefile.c (core_create_syms_from): Use correct size of buffer.
+
 2010-04-22  Nick Clifton  <nickc@redhat.com>
 
 	* po/gprof.pot: Updated by the Translation project.
